<package>
  <name>c2_tomato_challenge_2014</name>
  <version>1.0.0</version>
  <description>
    2014 tomato challenge for c2
  </description>
  <maintainer email="y-tanaka@jsk.imi.i.u-tokyo.ac.jp">
    Yoshimaru Tanaka, Chen Xiangyu, Krishneel Chaudhary, Kotaro Nagahama, Hiroaki Yaguchi
  </maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
