<package>
  <name>jsk_tomato_robot</name>
  <version>1.0.0</version>
  <description>
    jsk_tomato_robot
  </description>
  <maintainer email="h-yaguchi@jsk.t.u-tokyo.ac.jp">
    Hiroaki Yaguchi
  </maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>collada_urdf</build_depend>
  <build_depend>euscollada</build_depend>

  <run_depend>collada_urdf</run_depend>
  <run_depend>euscollada</run_depend>
  <run_depend>ureus</run_depend>

</package>
