<package>
  <name>tomato_cutting_demo</name>
  <version>1.0.0</version>
  <description>
    tomato cutting for IROS2014
  </description>
  <maintainer email="xychen@jsk.imi.i.u-tokyo.ac.jp">
    Chen Xiangyu, Krishneel Chaudhary, Yoshimaru Tanaka, Kotaro Nagahama, Hiroaki Yaguchi
  </maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>hrpsys_ros_bridge_tutorials</build_depend>
  <build_depend>tomato_detect</build_depend>

  <run_depend>hrpsys_ros_bridge_tutorials</run_depend>
  <run_depend>tomato_detect</run_depend>

</package>
