<package>
  <name>tomato_handeye</name>
  <version>1.0.0</version>
  <description>
    handeye related codes
  </description>
  <maintainer email="h-yaguchi@jsk.t.u-tokyo.ac.jp">
    Hiroaki Yaguchi
  </maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gige_camera_baumer17</run_depend>
  <run_depend>lsd_slam</run_depend>

</package>
