<package>
  <name>tomato_pedicel_detection</name>
  <version>1.0.0</version>
  <description>
    tomato pedicel detection
  </description>
  <maintainer email="h-yaguchi@jsk.t.u-tokyo.ac.jp">
    Hiroaki Yaguchi
  </maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>jsk_perception</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>jsk_perception</run_depend>

</package>
